Added profile controller to get random profile from db